--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "@supabase/supabase-js": "^2.86.2",
     "cors": "^2.8.5",
+    "express": "^4.19.2",
     "multer": "1.4.5-lts.2"
   }
 }
