--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.86.2",
-    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "multer": "1.4.5-lts.2"
+    "cors": "^2.8.5",
+    "multer": "1.4.5-lts.2",
+    "@supabase/supabase-js": "2.0.0",
+    "dotenv": "^16.4.5"
   }
 }
