--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "@supabase/supabase-js": "^2.87.1",
     "cors": "^2.8.5",
-    "multer": "1.4.5-lts.2",
-    "@supabase/supabase-js": "2.0.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
+    "multer": "^1.4.5-lts.2"
   }
 }
